--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.4",
     "brace": "^0.11.1",
     "create-react-app": "^2.1.0",
     "react": "^16.7.0-alpha.0",
